# bmath

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-release.sh  build.sh  docker-compose.yaml  fpm.Dockerfile  gen-lookup-tables.py  gen-testdata.py  gen.py  meson.build  package-lock.json  package.json  perf-test.sh
debian/: .gitignore  bmath.manpages  changelog  control  copyright  files  install  rules
debian/source/: options
docs/: wasm.md
man/: bmath.1  bmath.help2man
src/: argp.h  argp_config.h  bmath.c  conversions.h  functions.c  functions.h  lookup_tables.h  parser.c  parser.h  print.c  print.h  shim.h  symbol.c  symbol.h  token.c  token.h  util.h  version.h  version.h.in
test/: conversions.c  functions.c  parser.c
