cmake_minimum_required(VERSION 3.10)
project(bmath)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wshadow -Wextra -Wvla -Wmissing-field-initializers")
if (${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
    set(LIBRARIES ${LIBRARIES} "argp")
else (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(LIBRARIES ${LIBRARIES} "m")
endif()
set(TEST_LIBRARIES ${LIBRARIES})
set(SRC_FILES "")
set(CMAKE_VERBOSE_MAKEFILE ON)

find_path(CRITERION_INCLUDE_DIR NAMES criterion)
find_library(CRITERION_LIBRARY NAMES criterion REQUIRED)
if (CRITERION_LIBRARY)
	include_directories(${CRITERION_INCLUDE_DIR})
	set(TEST_LIBRARIES ${TEST_LIBRARIES} ${CRITERION_LIBRARY})
else(CRITERION_LIBRARY)
    message(WARNING "Unable to locate criterion. Test binary wont build.")
endif(CRITERION_LIBRARY)

set(SRC_FILES ${SRC_FILES} src/parser.c)

add_executable(${PROJECT_NAME} src/bmath.c ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} ${LIBRARIES})
target_link_directories(${PROJECT_NAME} PUBLIC src)

find_path(READLINE_INCLUDE_DIR NAMES readline.h HINTS /usr/include PATH_SUFFIXES readline)
find_library(READLINE_LIBRARY NAMES readline HINTS /usr/lib)
#message(${READLINE_INCLUDE_DIR} " " ${READLINE_LIBRARY})
#if (READLINE_LIBRARY)
#	target_link_directories(${PROJECT_NAME} PUBLIC ${READLINE_INCLUDE_DIR})
#	target_link_libraries(${PROJECT_NAME} ${READLINE_LIBRARY})
#else (READLINE_LIBRARY)
#	message(ERROR "Unable to locate readline. Won't build.")
#endif(READLINE_LIBRARY)


if (CRITERION_LIBRARY)
	set(SRC_FILES ${SRC_FILES} test/conversions.c test/parser.c)
	add_executable(${PROJECT_NAME}_test ${SRC_FILES})
	target_link_libraries(${PROJECT_NAME}_test ${TEST_LIBRARIES})
endif()
